# going-indie-jam-2024

./: .gitignore  Cargo.toml  readme.md
assets/: registry.json
assets/levels/: level1.blend  level1.gltf
src/: animations.rs  audio.rs  blender_workflow.rs  camera.rs  constants.rs  delay.rs  environment.rs  extensions.rs  level_progress.rs  main.rs  player.rs  stars.rs  tutors.rs  ui.rs
src/environment/: bounds.rs
src/environment/bounds/: command.rs
src/player/: despawn.rs  movement.rs  respawn.rs  spawn.rs
src/player/movement/: invisible_walls.rs
src/stars/: create.rs
src/tutors/: create.rs  start_condition.rs  waypoints.rs
src/tutors/waypoints/: move_to.rs
src/ui/: create.rs  game_over.rs  gameplay_hud.rs  level_selection.rs  main_menu.rs
src/ui/gameplay_hud/: pause.rs
src/ui/level_selection/: levels.rs  spawn_points.rs
src/ui/level_selection/levels/: commons.rs  level_1.rs  level_2.rs  level_3.rs
src/ui/level_selection/levels/commons/: chunks.rs
