[package]
name = "going-indie-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_third_person_camera = "0.1.10"
bevy_toon_shader = { git = "https://github.com/tbillington/bevy_toon_shader", branch = "bevy-0-13" }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
