[package]
name = "going-indie-jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_rapier3d = { version = "0.26.0", features = ["debug-render-3d"] }
bevy-inspector-egui = "0.24.0"
bevy_third_person_camera = "0.1.10"
bevy_registry_export = "0.3.1"
bevy_gltf_components = "0.5.1"
bevy_asset_loader = { version = "0.20.1", features = ["3d"] }
bevy_editor_pls = "0.8.1"
log = "0.4.21"
bevy_text_animation = "0.1.14"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
